@@ -400,7 +400,7 @@
        (rope "bob@test.com and fred@example.com")
        (lambda (src i s) (reverse s))))
   (test-equal '("poo poo ")
-      (irregex-fold '(* "poo ")
+      (irregex-fold '(+ "poo ")
                     (lambda (i m s)
                       (if (< i (irregex-match-end-index m 0))
                           (cons (irregex-match-substring m) s)
@@ -438,6 +438,9 @@
   (test-equal "x- y- z-"
       (irregex-replace/all '(: (look-behind (or "x" "y" "z")) "a")
                            "xa ya za"  "-"))
+  (test-equal "any gosh darned string"
+	(irregex-replace/all '(: bos (* whitespace))
+                             "any gosh darned string"  ""))
   (test-equal '("foo" " " "foo" " " "b" "a" "r" " " "foo")
       (irregex-extract '(or (: bow "foo" eow) any) "foo foo bar foo"))
   (test-equal '("f" "o" "o" "b" "a" "r" "b" "a" "z")
